# Pyscope

./: .gitignore  CODEX_CONTEXT.md  README.md  VALIDATION_PHASES_RESULTS.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: c1_observe.yml  visualizer-ci.yml
.opencode/plans/: C1_observacao_real.md  correcoes_P0_FASM.md
BCKPyscope/: .coverage
Pyscope/: README.md  pyproject.toml
Pyscope/.github/workflows/: visualizer-ci.yml
Pyscope/pyscope/: __init__.py
Pyscope/pyscope/visualizer/: __init__.py  cli.py  graphviz_builder.py
Pyscope/tests/test_visualizer/: test_builder.py
ags/: __init__.py  __main__.py  orchestrator.py
ags/cli/: main.py
ags/intelligence/: __init__.py
ags/storage/: database.py
ags/synthetic/: __init__.py  coverage_audit.py  generator.py  graph_set.py  orthogonality.py  perturbation.py  regimes.py  spec.py
docs/: AGS_SECOND_AGENT_CORRELATION.md  AGS_VALIDATION_PHASED_PLAN.md  APPLICABILITY.md  ARCHITECTURE.md  AUDIT.md  BRANCHING_STRATEGY.md  C0_RESULTS.md  C1_RESEARCH_PLAN.md  C1_RESULTS.md  CALIBRATION.md  CIR_INVARIANTS.md  CODEX_CONTEXT.md  DYNAMICS.md  FALLBACK_PROTOCOL.md  FALSIFIABILITY.md  FASM.md  FASM_BASELINE_v1.md  GOVERNANCE.md  INVARIANTS.md  LIMITATIONS.md  MEASUREMENT_THEORY.md  MEMORY.md  METRICS.md  ONTOLOGY.md  PHENOMENA.md  PROVISIONING_PLAYBOOK.md  REMOTE_PROVISIONING.md  RESOURCE_ADAPTER.md  SCIENTIFIC_VALIDATION_PROTOCOL.md  STATE_VECTOR.md  SYSTEM_OVERVIEW.md  THEORY.md
pyscope/: __init__.py
pyscope/core/: __init__.py
pyscope/visualizer/: __init__.py  cli.py  graphviz_builder.py  html_report.py  renderer.py  schema.py
tests/: conftest.py  test_baseline.py  test_classification.py  test_freetier_adapter.py  test_graph.py  test_graph_invariants.py  test_graph_validation.py  test_math_invariants.py  test_mcp_register.py  test_observation.py  test_provision_aws.py  test_provision_oci_sdk.py  test_provision_oracle.py  test_remote_runner.py  test_resource_adapter.py  test_run_c1_safely.py  test_snapshot_consistency.py  test_synthetic_c00.py
tools/: README.md  ags_validation_phases.py  c1_observe.py  c1_observe_requests.py  freetier_adapter.py  mcp_register.py  provision_and_run_aws.py  provision_and_run_oci_sdk.py  provision_and_run_oracle.py  remote_runner.py  resource_adapter.py  run_c1_safely.py  verify_baseline.py
(+46 files in other folders)
