[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyscope"
version = "2.0.0"
description = "PyScope — Observatório Arquitetural para Python. Observação estática de grafos de imports, métricas FASM, artefatos auditáveis e visualizações."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Bertolzo" }]
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
intelligence = [
    "numpy>=1.24",
    "pandas>=2.0",
    "prophet>=1.1",
]
nfc = [
    "sqlite-vec>=0.1",
    "numpy>=1.24",
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
]
dashboard = [
    "plotly>=5.15",
    "jinja2>=3.1",
]
cloud = [
    "oci>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "mutmut>=3.0",
]
all = [
    "pyscope[intelligence,nfc,api,dashboard,dev]",
]

[project.scripts]
pyscope-visualizer = "pyscope.visualizer.cli:main"
ags = "ags.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["ags", "pyscope"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ags --cov=pyscope --cov-report=term-missing"

[tool.mutmut]
paths_to_mutate = ["ags/", "pyscope/"]
backup = false
